--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="my-photo.jpg" alt="A photo of me">
+
+    <!-- Name -->
+    <h1>Chhavi Verma</h1>
+
+    
+    <p>
+        <a href="https://www.linkedin.com/public-profile/settings/" target="_blank">My LinkedIn</a>
+    </p>
+
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>
+            Web development, UI/UX design, JavaScript, HTML, CSS, responsive design, and accessibility.
+        </p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Personal Portfolio Website</li>
+            <li>Interactive To-Do App</li>
+            <li>Responsive E-Commerce Mockup</li>
+        </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
